-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.948 2011-04-14 22:18:29 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-14	pwessel
	* *.[ch]:		Ended support for OS/2.  GMT 4 remains an option for OS/2 users.

2011-04-14	jluis
	* gmt_gdalread.c:	Fix situation when reading a subregion via GDAL
	* gmt_customio.c:	---"---

2011-04-14	remko
	* gmt_gdalread.c:	Sets grid registration of pixel registered when data type is Byte.
				We may/will need to update this later.
	* gmt_esri_io.c:	Fixed error in selecting output row when loading a binary subsection.

2011-04-12      pwessel
	* configure.ac:		Added check for log2, with macro in gmt_math.h
	
2011-04-12	remko
	* gmt_esri_io.c:	Load GTOPO30 and SRTM30 as pixel registered grids (which they are).
	* gmt_gdalread.[ch]:	Removed C.active from GDALREAD_CTRL. Need was based on misinterpretation.
	* gmt_grdio.c:		Force pixel registration in GMT_read_image_info.
	* gmt_customio.c:	Force pixel registration in GMT_gdal_read_grd_info.
	* gmt_esri_io.c:	Put type flags in newly created "flags" variable in grid header.
	* grdreformat_func.c:	Fixed bug when using -R. Did not select region properly.
	* examples/ex32:	New example, thanks to Stephan Eickschen.
	* psimage_func.c:	Fixed bug in file_is_known.

2011-04-11      pwessel
	* grdproject_func.c:	Output grd header had wrong units when non-inch settings were in effect.

2011-04-11	remko
	* *.c:			Produce consistent messages (Warning:, Error:, Syntax error:)
	* gmt_io.h:		Introduced "enum {GMT_X, GMT_Y, GMT_Z};" to make debugging easier
	* gmt_init.c:		Allow using "c" for arcseconds in -B option in GMT_COMPAT.

2011-04-09	jluis
	* psimage_func.c:	When used with GDAL alow selecting the image's bands order via a
				my_image.jpg+b<stuff> mechanism. 
				Test if image name has a +b<stuff> glued to the name.
	* grdimage_func.c:	---"---